# model-ensembler

./: .authors.yml  .gitignore  .mailmap  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  template.yaml
.github/workflows/: pypi.yml
docs/: CHANGELOG.md  Makefile  acknowledgements.md  api.md  code_of_conduct.md  contributing.md  index.md  init.sh  installation.md  news.md  requirements.txt  testimonials.md
docs/developer/: code_of_conduct.md  contributing.md
docs/developer/contribution/: documentation.md  software.md
docs/developer/functionality/: technical.md
docs/images/: model-ensembler-list.drawio  model-ensembler.drawio
docs/images/drawio/: definitions.drawio  ensemble.drawio  model-ensembler-list.drawio  model-ensembler.drawio  overview.excalidraw
docs/source/: conf.py  index.rst
docs/user/: WAVI_example.md  basic-usage.md  configuration.md  example1.md  overview.md  templates.md  yaml.md
examples/: .gitignore  config_template.yaml  sanity-check.yml  test-seqbatch.yaml  test-single.yaml  test.yaml
examples/invalid_yamls/: bad_type.yaml  invalid_batch_config.yaml  missing_name.yaml
examples/template_job/: post_run.sh.j2  pre_run.sh.j2  preprocess.sh.j2  slurm_run.sh.j2
hpc_batcher/: __init__.py  __main__.py  batcher.py  config-schema.json  config.py  utils.py
hpc_batcher/tasks/: __init__.py  data.py  hpc.py  sys.py  utils.py
model_ensembler/: __init__.py  batcher.py  cli.py  config.py  ctx.py  exceptions.py  model-ensemble.json  runners.py  templates.py  utils.py
model_ensembler/cluster/: __init__.py  dummy.py  pyslurm.py  slurm.array.py  slurm.py
model_ensembler/tasks/: __init__.py  exceptions.py  hpc.py  sys.py  utils.py
model_toolkit/: config.py
model_toolkit/tasks/: hpc.py
slurm_toolkit/: batcher.orig.py  batcher.py  cli.py  config-schema.json  config.py  ctx.py  utils.py
slurm_toolkit/tasks/: __init__.py  data.py  hpc.py  sys.py  utils.py
test/: .gitignore  test-seqbatch.yaml  test-single.yaml  test.yaml
test/template_job/: inputfile.j2  postprocess.sh.j2  preprocess.sh.j2  slurm_run.sh.j2
tests/: test_batcher.py  test_cli.py  test_config.py  test_runners.py  test_templates.py  test_yaml_config.py
